changed overflow:scroll for stoplist on website version

--- a/style.css
+++ b/style.css
@@ -78,8 +78,10 @@ li:hover {
 #stopBox {
   margin-top: 20px;
   display: flex;
-  justify-content: center;
+  flex-direction: column;
   align-items: center;
+  overflow: scroll;
+  height: auto;
 }
 
 .refreshCollapseBox {
